[metadata]
name = Influxdb_intro
version = 0.0.1
author = Jose Vicente Nunez Zuleta
author_email = kodegeek.com@protonmail.com
license = Apache 2.0
summary = Sample scripts to process data in/ out Influxdb using public domain data
home_page = https://github.com/josevnz/influxdb_intro
description = Scripts to manipulate content of data into / out an Influxdb instance
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = db
setup_requires =
    setuptools
    wheel
    build
    pip
    twine
install_requires =
    importlib; python_version == "3.9"
    rich
    setuptools
    toml
    influxdb-client
    s2cell
    uszipcode
    levenshtein
scripts =
    scripts/import_usts.sh
    scripts/import_usts.py
    scripts/most_common_crime_types.py